--- a/res/css/style.css
+++ b/res/css/style.css
@@ -50,7 +50,7 @@ h4 {
  .container {   
         height: 500;
         position:absolute;
-        margin: 200px 0px 0px 700px;
+        margin: 10% 0px 0px 35%;
         text-align:center;
         background-color: whitesmoke;  
     }   
